testing my code on my blog

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>Kia ora Taiao! (Hello World!)</h1>
     <p>This is the beginning of my website home page.</p>
     <p>It will eventually contain a list of links to all my blogs.</p>
+    <p>this is a test to see if the code i push from visual code works</p>
   </body>
 </html>
 
