--- a/my blog.html
+++ b/my blog.html
@@ -1,8 +1,9 @@
-<html>
+<!DOCTYPE html>
   <head>
     <title>My blog</title>
-  </head>
-  <link href="../styles/main.css" rel="stylesheet" type="text/css">
+
+    <meta charset="UTF-8">
+  </head><link href="../styles/main.css" rel="stylesheet" type="text/css">
   <body>
     <h1>Kia ora Taiao! (Hello World!)</h1>
     <p>This is the beginning of my website home page.</p>
