--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
+<html>
   <head>
     <title>My blog</title>
-
-    <meta charset="UTF-8">
-  </head><link href="../styles/main.css" rel="stylesheet" type="text/css">
+  </head>
   <body>
     <h1>Kia ora Taiao! (Hello World!)</h1>
     <p>This is the beginning of my website home page.</p>
     <p>It will eventually contain a list of links to all my blogs.</p>
-    <p>This is a test to see if the code i push from visual code works</p>
   </body>
 </html>
-
