--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>My blog</title>
+    <link href="../styles/main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Kia ora Taiao! (Hello World!)</h1>
